--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -2,9 +2,11 @@
 \begin{small}
 
 % The longtable environment.
+\begin{latexonly}
 \setlength\LTcapwidth{\textwidth}
 \setlength\LTleft{0pt}
 \setlength\LTright{0pt}
+\end{latexonly}
 \begin{longtable}{l@{\extracolsep{\fill}}ccccccccc}
 
 % Caption.
