--- a/docs/latex/noe.tex
+++ b/docs/latex/noe.tex
@@ -158,7 +158,7 @@ relax will automatically determine the format of the peak list.
 Currently only Sparky\index{software!Sparky}, XEasy\index{software!XEasy}, NMRView\index{software!NMRView} and a generic columnar formatted text file are supported.
 
 In this example, relax will determine from the file contents that these are Sparky\index{software!Sparky} peak lists (saved after typing \gui{lt}).
-The first column of the file should be the Sparky assignment string and it is assumed that the 4$^\textrm{th}$ column contains either the peak height or peak volume (though this can be in any column -- the \prompt{int\_col} argument is used to specify where the data is).
+The first column of the file should be the Sparky assignment string and it is assumed that the 4$^{\textrm{th}}$ column contains either the peak height or peak volume (though this can be in any column -- the \prompt{int\_col} argument is used to specify where the data is).
 Without specifying the \prompt{int\_method} argument, peak heights will be assumed.
 See page~\pageref{uf: spectrum.read_intensities} for a description of all the \uf{spectrum\ufsep{}read\ufus{}intensities} user function arguments.
 In this example, the peak list looks like:
