--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -142,80 +142,80 @@
 \newcommand{\KL}{\Delta_{\scriptscriptstyle \text{K-L}}}
 
 \newcommand{\aveoffset}{\bar\Omega}
-\newcommand{\offsetA}{\Omega_\textrm{A}}
-\newcommand{\offsetB}{\Omega_\textrm{B}}
-\newcommand{\offsetC}{\Omega_\textrm{C}}
+\newcommand{\offsetA}{\Omega_{\textrm{A}}}
+\newcommand{\offsetB}{\Omega_{\textrm{B}}}
+\newcommand{\offsetC}{\Omega_{\textrm{C}}}
 \newcommand{\aveomega}{\bar\omega}
 \newcommand{\dw}{\Delta\omega}
-\newcommand{\dwAB}{\Delta\omega_\textrm{AB}}
-\newcommand{\dwAC}{\Delta\omega_\textrm{AC}}
-\newcommand{\dwBC}{\Delta\omega_\textrm{BC}}
+\newcommand{\dwAB}{\Delta\omega_{\textrm{AB}}}
+\newcommand{\dwAC}{\Delta\omega_{\textrm{AC}}}
+\newcommand{\dwBC}{\Delta\omega_{\textrm{BC}}}
 \newcommand{\dwH}{\Delta\omega^{\scriptscriptstyle\mathrm{H}}}
-\newcommand{\dwHAB}{\Delta\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{AB}}
-\newcommand{\dwHAC}{\Delta\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{AC}}
-\newcommand{\dwHBC}{\Delta\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{BC}}
-\newcommand{\konetwo}{\textrm{k}_\textrm{12}}
-\newcommand{\konethree}{\textrm{k}_\textrm{13}}
-\newcommand{\koneN}{\textrm{k}_\textrm{1N}}
-\newcommand{\kex}{\textrm{k}_\textrm{ex}}
-\newcommand{\kexAB}{\textrm{k}_\textrm{ex}^\textrm{AB}}
-\newcommand{\kexAC}{\textrm{k}_\textrm{ex}^\textrm{AC}}
-\newcommand{\kexBC}{\textrm{k}_\textrm{ex}^\textrm{BC}}
-\newcommand{\kA}{\textrm{k}_\textrm{A}}
-\newcommand{\kB}{\textrm{k}_\textrm{B}}
-\newcommand{\kC}{\textrm{k}_\textrm{C}}
-\newcommand{\kAB}{\textrm{k}_\textrm{AB}}
-\newcommand{\kBA}{\textrm{k}_\textrm{BA}}
-\newcommand{\kAC}{\textrm{k}_\textrm{AC}}
-\newcommand{\kCA}{\textrm{k}_\textrm{CA}}
-\newcommand{\kBC}{\textrm{k}_\textrm{BC}}
-\newcommand{\kCB}{\textrm{k}_\textrm{CB}}
-\newcommand{\ncyc}{N_\textrm{cyc}}
-\newcommand{\nucpmg}{\nu_\textrm{CPMG}}
-\newcommand{\omegaA}{\omega_\textrm{A}}
-\newcommand{\omegaB}{\omega_\textrm{B}}
-\newcommand{\omegaC}{\omega_\textrm{C}}
-\newcommand{\omegae}{\omega_\textrm{e}}
-\newcommand{\omegaHA}{\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{A}}
-\newcommand{\omegaHB}{\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{B}}
-\newcommand{\omegaHC}{\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{C}}
+\newcommand{\dwHAB}{\Delta\omega^{\scriptscriptstyle\mathrm{H}}_{\textrm{AB}}}
+\newcommand{\dwHAC}{\Delta\omega^{\scriptscriptstyle\mathrm{H}}_{\textrm{AC}}}
+\newcommand{\dwHBC}{\Delta\omega^{\scriptscriptstyle\mathrm{H}}_{\textrm{BC}}}
+\newcommand{\konetwo}{\textrm{k}_{\textrm{12}}}
+\newcommand{\konethree}{\textrm{k}_{\textrm{13}}}
+\newcommand{\koneN}{\textrm{k}_{\textrm{1N}}}
+\newcommand{\kex}{\textrm{k}_{\textrm{ex}}}
+\newcommand{\kexAB}{\textrm{k}_{\textrm{ex}}^{\textrm{AB}}}
+\newcommand{\kexAC}{\textrm{k}_{\textrm{ex}}^{\textrm{AC}}}
+\newcommand{\kexBC}{\textrm{k}_{\textrm{ex}}^{\textrm{BC}}}
+\newcommand{\kA}{\textrm{k}_{\textrm{A}}}
+\newcommand{\kB}{\textrm{k}_{\textrm{B}}}
+\newcommand{\kC}{\textrm{k}_{\textrm{C}}}
+\newcommand{\kAB}{\textrm{k}_{\textrm{AB}}}
+\newcommand{\kBA}{\textrm{k}_{\textrm{BA}}}
+\newcommand{\kAC}{\textrm{k}_{\textrm{AC}}}
+\newcommand{\kCA}{\textrm{k}_{\textrm{CA}}}
+\newcommand{\kBC}{\textrm{k}_{\textrm{BC}}}
+\newcommand{\kCB}{\textrm{k}_{\textrm{CB}}}
+\newcommand{\ncyc}{N_{\textrm{cyc}}}
+\newcommand{\nucpmg}{\nu_{\textrm{CPMG}}}
+\newcommand{\omegaA}{\omega_{\textrm{A}}}
+\newcommand{\omegaB}{\omega_{\textrm{B}}}
+\newcommand{\omegaC}{\omega_{\textrm{C}}}
+\newcommand{\omegae}{\omega_{\textrm{e}}}
+\newcommand{\omegaHA}{\omega^{\scriptscriptstyle\mathrm{H}}_{\textrm{A}}}
+\newcommand{\omegaHB}{\omega^{\scriptscriptstyle\mathrm{H}}_{\textrm{B}}}
+\newcommand{\omegaHC}{\omega^{\scriptscriptstyle\mathrm{H}}_{\textrm{C}}}
 \newcommand{\omegaone}{\omega_1}
-\newcommand{\omegarf}{\omega_\textrm{rf}}
-\newcommand{\pone}{p_\textrm{1}}
-\newcommand{\ptwo}{p_\textrm{2}}
-\newcommand{\pthree}{p_\textrm{3}}
-\newcommand{\pA}{p_\textrm{A}}
-\newcommand{\pB}{p_\textrm{B}}
-\newcommand{\pC}{p_\textrm{C}}
-\newcommand{\pN}{p_\textrm{N}}
-\newcommand{\Phiex}{\Phi_\textrm{ex}}
-\newcommand{\PhiexB}{\Phi_\textrm{ex,B}}
-\newcommand{\PhiexC}{\Phi_\textrm{ex,C}}
-\newcommand{\Phiexi}{\Phi_\textrm{ex,i}}
-\newcommand{\Rex}{\mathrm{R}_\textrm{ex}}
-\newcommand{\RoneA}{\mathrm{R}_\textrm{1A}}
-\newcommand{\RoneB}{\mathrm{R}_\textrm{1B}}
-\newcommand{\RoneC}{\mathrm{R}_\textrm{1C}}
+\newcommand{\omegarf}{\omega_{\textrm{rf}}}
+\newcommand{\pone}{p_{\textrm{1}}}
+\newcommand{\ptwo}{p_{\textrm{2}}}
+\newcommand{\pthree}{p_{\textrm{3}}}
+\newcommand{\pA}{p_{\textrm{A}}}
+\newcommand{\pB}{p_{\textrm{B}}}
+\newcommand{\pC}{p_{\textrm{C}}}
+\newcommand{\pN}{p_{\textrm{N}}}
+\newcommand{\Phiex}{\Phi_{\textrm{ex}}}
+\newcommand{\PhiexB}{\Phi_{\textrm{ex,B}}}
+\newcommand{\PhiexC}{\Phi_{\textrm{ex,C}}}
+\newcommand{\Phiexi}{\Phi_{\textrm{ex,i}}}
+\newcommand{\Rex}{\mathrm{R}_{\textrm{ex}}}
+\newcommand{\RoneA}{\mathrm{R}_{\textrm{1A}}}
+\newcommand{\RoneB}{\mathrm{R}_{\textrm{1B}}}
+\newcommand{\RoneC}{\mathrm{R}_{\textrm{1C}}}
 \newcommand{\Ronerhoprime}{\mathrm{R}_{1\rho}'}
 \newcommand{\RonerhoprimeA}{\mathrm{R}_{1\rho A}'}
 \newcommand{\RonerhoprimeB}{\mathrm{R}_{1\rho B}'}
 \newcommand{\RonerhoprimeC}{\mathrm{R}_{1\rho C}'}
-\newcommand{\Rtwoeff}{\mathrm{R}_\textrm{2eff}}
-\newcommand{\RtwoeffCR}{\mathrm{R}_\textrm{2eff}^{\textrm{CR72}}}
+\newcommand{\Rtwoeff}{\mathrm{R}_{\textrm{2eff}}}
+\newcommand{\RtwoeffCR}{\mathrm{R}_{\textrm{2eff}}^{\textrm{CR72}}}
 \newcommand{\Rtwozero}{\mathrm{R}_2^0}
-\newcommand{\RtwozeroA}{\mathrm{R}_\mathrm{2A}^0}
-\newcommand{\RtwozeroB}{\mathrm{R}_\mathrm{2B}^0}
-\newcommand{\RtwozeroC}{\mathrm{R}_\mathrm{2C}^0}
-\newcommand{\RtwozeroMQ}{\mathrm{R}_\mathrm{2,MQ}^0}
-\newcommand{\RtwoDQA}{\mathrm{R}_\mathrm{2,DQ}^\mathrm{A}}
-\newcommand{\RtwoDQB}{\mathrm{R}_\mathrm{2,DQ}^\mathrm{B}}
-\newcommand{\RtwoDQC}{\mathrm{R}_\mathrm{2,DQ}^\mathrm{C}}
-\newcommand{\RtwoZQA}{\mathrm{R}_\mathrm{2,ZQ}^\mathrm{A}}
-\newcommand{\RtwoZQB}{\mathrm{R}_\mathrm{2,ZQ}^\mathrm{B}}
-\newcommand{\RtwoZQC}{\mathrm{R}_\mathrm{2,ZQ}^\mathrm{C}}
-\newcommand{\tex}{\tau_\textrm{ex}}
-\newcommand{\taucpmg}{\tau_\textrm{CPMG}}
-\newcommand{\Trelax}{T_\textrm{relax}}
+\newcommand{\RtwozeroA}{\mathrm{R}_{\mathrm{2A}}^0}
+\newcommand{\RtwozeroB}{\mathrm{R}_{\mathrm{2B}}^0}
+\newcommand{\RtwozeroC}{\mathrm{R}_{\mathrm{2C}}^0}
+\newcommand{\RtwozeroMQ}{\mathrm{R}_{\mathrm{2,MQ}}^0}
+\newcommand{\RtwoDQA}{\mathrm{R}_{\mathrm{2,DQ}}^{\mathrm{A}}}
+\newcommand{\RtwoDQB}{\mathrm{R}_{\mathrm{2,DQ}}^{\mathrm{B}}}
+\newcommand{\RtwoDQC}{\mathrm{R}_{\mathrm{2,DQ}}^{\mathrm{C}}}
+\newcommand{\RtwoZQA}{\mathrm{R}_{\mathrm{2,ZQ}}^{\mathrm{A}}}
+\newcommand{\RtwoZQB}{\mathrm{R}_{\mathrm{2,ZQ}}^{\mathrm{B}}}
+\newcommand{\RtwoZQC}{\mathrm{R}_{\mathrm{2,ZQ}}^{\mathrm{C}}}
+\newcommand{\tex}{\tau_{\textrm{ex}}}
+\newcommand{\taucpmg}{\tau_{\textrm{CPMG}}}
+\newcommand{\Trelax}{T_{\textrm{relax}}}
 
 % Natbib Citation format.
 \bibpunct{(}{)}{;}{a}{,}{,}
