--- a/docs/latex/curvefit.tex
+++ b/docs/latex/curvefit.tex
@@ -361,7 +361,7 @@ By default the file format will be automatically detected.
 Currently Sparky\index{software!Sparky}, XEasy\index{software!XEasy}, NMRView\index{software!NMRView}, and generic columnar formatted peak lists are supported.
 To be able to import any other type of format please send an email to the relax development mailing list\index{mailing list!relax-devel} with the details of the format.
 Adding support for new formats is trivial.
-The following series of commands -- an expansion of the \prompt{for} loop in the sample script -- will load peak intensities from six different relaxation periods, four of which have been duplicated, from Sparky peak lists with the peak heights in the 10$^\textrm{th}$ column.
+The following series of commands -- an expansion of the \prompt{for} loop in the sample script -- will load peak intensities from six different relaxation periods, four of which have been duplicated, from Sparky peak lists with the peak heights in the 10$^{\textrm{th}}$ column.
 
 \begin{lstlisting}[numbers=none]
 spectrum.read_intensities('T2_ncyc1.list',   spectrum_id='1', int_col=10)
@@ -397,7 +397,7 @@ spectrum.replicated(spectrum_ids=['T2_ncyc11_ave', 'T2_ncyc11b_ave'])
 \end{lstlisting}
 
 Note that the relaxation time period should be calculated directly from the pulse sequence (as the sum of delays and pulses for the period), as the estimated time may not match the real time.
-For the Sparky peak lists, by default relax assumes that the intensity value is in the 4$^\textrm{th}$ column.
+For the Sparky peak lists, by default relax assumes that the intensity value is in the 4$^{\textrm{th}}$ column.
 A typical file looks like:
 
 {\scriptsize \begin{verbatim}
