Shifted the model-free model equations for the HTML manual to the subequations environment.
This is for the relax manual at http://www.nmr-relax.com/manual/index.html

This is to preserve the equation numbering so that the HTML and PDF equation numbers match as
closely as possible.

--- a/docs/latex/model-free.tex
+++ b/docs/latex/model-free.tex
@@ -297,18 +297,20 @@ Extending the list of models given in \citet{Mandel95, Fushman97, Orekhov99b, Ko
 \end{subequations}
 \end{latexonly}
 \begin{htmlonly}
-\begin{eqnarray}
- m0 &=& \{\},                                   \label{model: m0} \\
- m1 &=& \{S^2\},                                \label{model: m1} \\
- m2 &=& \{S^2, \tau_e\},                        \label{model: m2} \\
- m3 &=& \{S^2, R_{ex}\},                        \label{model: m3} \\
- m4 &=& \{S^2, \tau_e, R_{ex}\},                \label{model: m4} \\
- m5 &=& \{S^2, S^2_f, \tau_s\},                 \label{model: m5} \\
- m6 &=& \{S^2, \tau_f, S^2_f, \tau_s\},         \label{model: m6} \\
- m7 &=& \{S^2, S^2_f, \tau_s, R_{ex}\},         \label{model: m7} \\
- m8 &=& \{S^2, \tau_f, S^2_f, \tau_s, R_{ex}\}, \label{model: m8} \\
- m9 &=& \{R_{ex}\}.                             \label{model: m9}
-\end{eqnarray}
+\begin{subequations}
+\begin{align}
+ m0 &= \{\},                                   \label{model: m0} \\
+ m1 &= \{S^2\},                                \label{model: m1} \\
+ m2 &= \{S^2, \tau_e\},                        \label{model: m2} \\
+ m3 &= \{S^2, R_{ex}\},                        \label{model: m3} \\
+ m4 &= \{S^2, \tau_e, R_{ex}\},                \label{model: m4} \\
+ m5 &= \{S^2, S^2_f, \tau_s\},                 \label{model: m5} \\
+ m6 &= \{S^2, \tau_f, S^2_f, \tau_s\},         \label{model: m6} \\
+ m7 &= \{S^2, S^2_f, \tau_s, R_{ex}\},         \label{model: m7} \\
+ m8 &= \{S^2, \tau_f, S^2_f, \tau_s, R_{ex}\}, \label{model: m8} \\
+ m9 &= \{R_{ex}\}.                             \label{model: m9}
+\end{align}
+\end{subequations}
 \end{htmlonly}
 
 \noindent The parameter $R_{ex}$ is scaled quadratically with field strength in these models as it is assumed to be fast.
@@ -334,18 +336,20 @@ These models, represented in set notation by the symbol $\Localset_i$, are
 \end{subequations}
 \end{latexonly}
 \begin{htmlonly}
-\begin{eqnarray}
- tm0 &=& \{\tau_m\},                                     \label{model: tm0} \\
- tm1 &=& \{\tau_m, S^2\},                                \label{model: tm1} \\
- tm2 &=& \{\tau_m, S^2, \tau_e\},                        \label{model: tm2} \\
- tm3 &=& \{\tau_m, S^2, R_{ex}\},                        \label{model: tm3} \\
- tm4 &=& \{\tau_m, S^2, \tau_e, R_{ex}\},                \label{model: tm4} \\
- tm5 &=& \{\tau_m, S^2, S^2_f, \tau_s\},                 \label{model: tm5} \\
- tm6 &=& \{\tau_m, S^2, \tau_f, S^2_f, \tau_s\},         \label{model: tm6} \\
- tm7 &=& \{\tau_m, S^2, S^2_f, \tau_s, R_{ex}\},         \label{model: tm7} \\
- tm8 &=& \{\tau_m, S^2, \tau_f, S^2_f, \tau_s, R_{ex}\}, \label{model: tm8} \\
- tm9 &=& \{\tau_m, R_{ex}\}.                             \label{model: tm9}
-\end{eqnarray}
+\begin{subequations}
+\begin{align}
+ tm0 &= \{\tau_m\},                                     \label{model: tm0} \\
+ tm1 &= \{\tau_m, S^2\},                                \label{model: tm1} \\
+ tm2 &= \{\tau_m, S^2, \tau_e\},                        \label{model: tm2} \\
+ tm3 &= \{\tau_m, S^2, R_{ex}\},                        \label{model: tm3} \\
+ tm4 &= \{\tau_m, S^2, \tau_e, R_{ex}\},                \label{model: tm4} \\
+ tm5 &= \{\tau_m, S^2, S^2_f, \tau_s\},                 \label{model: tm5} \\
+ tm6 &= \{\tau_m, S^2, \tau_f, S^2_f, \tau_s\},         \label{model: tm6} \\
+ tm7 &= \{\tau_m, S^2, S^2_f, \tau_s, R_{ex}\},         \label{model: tm7} \\
+ tm8 &= \{\tau_m, S^2, \tau_f, S^2_f, \tau_s, R_{ex}\}, \label{model: tm8} \\
+ tm9 &= \{\tau_m, R_{ex}\}.                             \label{model: tm9}
+\end{align}
+\end{subequations}
 \end{htmlonly}
 
 
