Fixes for the equation number in the HTML version of the manual.
This is for the relax manual at http://www.nmr-relax.com/manual/index.html.

--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -408,6 +408,11 @@
   \item[ZQ:]  zero quantum
 \end{description}
 
+% Equation numbering fix for latex2html. 
+\begin{htmlonly}
+\addtocounter{chapter}{-1}
+\end{htmlonly}
+
 
 % Citations.
 %%%%%%%%%%%%
