Started to create a chapter for the N-state model or ensemble analysis in the manual.
This simply consists of a few introductory sections and the phathalic acid graphic.

--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -446,6 +446,7 @@
 \include{model-free}
 \include{jw_mapping}
 \include{consistency_tests}
+\include{n_state}
 \include{dispersion}
 
 \part{Power users}
@@ -531,11 +532,13 @@
 \index{OpenDX|see{software, OpenDX}}
 \index{OpenMPI|see{MPI, OpenMPI}}
 \index{OS X|see{Operating system, Mac OS X}}
+\index{PCS|see{Pseudo-contact shift}}
 \index{Polak-Ribi\`ere|see{optimisation, algorithm, Polak-Ribi\`ere}}
 \index{Polak-Ribi\`ere +|see{optimisation, algorithm, Polak-Ribi\`ere +}}
 \index{PyMOL|see{software, PyMOL}}
 \index{R1@$\Rone$|see{relaxation rate, spin-lattice}}
 \index{R2@$\Rtwo$|see{relaxation rate, spin-spin}}
+\index{RDC|see{Residual dipolar couplings}}
 \index{relax|see{software, relax}}
 \index{simplex algorithm|see{optimisation, algorithm, Nelder-Mead simplex}}
 \index{Sparky|see{software, Sparky}}
